# MultiChain_NFT_marketplace

backend/: .env-copy  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/config/: ERC1155Sale.json  ERC721Sale.json  dev.ts  devnet.json  index.ts
backend/src/constants/: activity.ts  bid.ts  errorDetailsResponse.ts  errorResponse.ts  global.ts  httpStatusCode.ts  index.ts  interfaces.ts  messages.ts
backend/src/controllers/: activity.ts  banner.ts  bid.ts  collection.ts  global.ts  hashlist.ts  jwt.ts  message.ts  nft.ts  room.ts  (+3 more)
eth-contract/: .env.example  LICENSE  README.md  hardhat.config.js  package-lock.json  package.json
eth-contract/.openzeppelin/: goerli.json  unknown-31337.json
eth-contract/cache/: solidity-files-cache.json  validations.json
eth-contract/contracts/: Addresses.sol  ERC1155Auction.sol  ERC1155AuctionBase.sol  ERC1155SaleBase.sol  ERC721Auction.sol  ERC721AuctionBase.sol  ERC721SaleBase.sol  MarketplaceBase.sol  ProxyRegistry.sol
eth-contract/scripts/: deploy.js  deploy1.js
eth-contract/test/: erc1155-test.js  erc721-test.js
frontend/: LICENSE  README.md  config-overrides.js  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  base.scss  index.css  index.js
sol-contract/: Anchor.toml  submarine_dev.json
sol-contract/programs/degen_marketplace_contract/: Cargo.toml
sol-contract/programs/degen_marketplace_contract/src/: lib.rs
sol-contract/tests/: Submarine_marketplace_contract.ts
(+339 files in other folders)
