[package]
name = "degen_marketplace_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_marketplace_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.3.0"
solana-program = "1.9.13"
mpl-token-metadata = { features = ["no-entrypoint"], version = "1.2.5" }
